improves configurations and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # The ID of your GitHub App
 APP_ID=xxx
+PRIVATE_KEY="xxx"
+GITHUB_CLIENT_ID=xxx
+GITHUB_CLIENT_SECRET=xxx
 WEBHOOK_SECRET=development
 
 # Use `trace` to get verbose logging or `info` to show less
