improves documentation and removes initial boilerplate

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsc",
     "start": "probot run ./lib/index.js",
     "test": "vitest",
+    "dev": "LOG_LEVEL=trace npm start",
     "postinstall": "npm run build"
   },
   "dependencies": {
