adds deployment configuration for edge functions

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ LOG_LEVEL=debug
 
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=https://smee.io/xxx
+WEBHOOK_URL=https://<project-name>.vercel.app/api/webhooks
