--- a/app.yml
+++ b/app.yml
@@ -127,7 +127,7 @@ default_permissions:
 name: neptun-github-app
 
 # The homepage of your GitHub App.
-url: https://github.com//
+url: https://neptun-github-app.vercel.app
 
 # A description of the GitHub App.
 description: The official neptun-software GitHub App.
