--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PRIVATE_KEY="xxx"
 GITHUB_CLIENT_ID=xxx
 GITHUB_CLIENT_SECRET=xxx
 WEBHOOK_SECRET=development
+WEBHOOK_PATH=/api/webhooks # just needed for development (for smee.io to work properly), production works correctly without it
 
 # Use `trace` to get verbose logging or `info` to show less
 LOG_LEVEL=debug
