updates `.env.example` to work with vercel edge

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-# The ID of your GitHub App
+# GitHub App
 APP_ID=xxx
 PRIVATE_KEY="xxx"
 GITHUB_CLIENT_ID=xxx
 GITHUB_CLIENT_SECRET=xxx
-WEBHOOK_SECRET=development
+WEBHOOK_SECRET=xxx
+
+# Environment Specific
 WEBHOOK_PATH=/api/webhooks # just needed for development (for smee.io to work properly), production works correctly without it
+NODEJS_HELPERS=0 # needed for vercel edge (else {"error":"Error: [@octokit/webhooks] signature does not match event payload and secret"})
 
 # Use `trace` to get verbose logging or `info` to show less
 LOG_LEVEL=debug
