adds biome, drizzle and a db schema sync workflow

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ LOG_LEVEL=debug
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=https://smee.io/xxx
 WEBHOOK_URL=https://<project-name>.vercel.app/api/webhooks
+
+# Data Persistence
+DATABASE_CONNECTION_STRING=postgresql://postgres:postgres@localhost:5432/postgres
