--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "postgres": "^3.4.4",
-    "probot": "^13.0.1"
+    "probot": "^13.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
