adds lint rule for `lint/correctness/noUnusedImports`

--- a/.github/workflows/schema.yml
+++ b/.github/workflows/schema.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           npm ci
           npm run db:pull
+          npx @biomejs/biome lint --write ./database/migrations
           npx @biomejs/biome format --write ./database/migrations
 
       - name: Fix Import Paths
